20260517v3_記錄